# pybela-drumsynth

./: .gitignore  CMakeLists.txt  README.md  build.sh  commands.md  drumsynth_pybela.ipynb  requirements.txt
bela-drumsynth/drumsynth-inference/: build.sh
drumsynth-original/: DrumController.cpp  DrumController.h  Noise.cpp  OnsetDetection.cpp  OnsetDetection.h  SnareDrum.cpp  SnareDrum.h  render.cpp
src/: CMakeLists.txt  DrumController.cpp  DrumController.h  DrumControllerInference.cpp  DrumControllerInference.h  Envelope.cpp  Noise.h  OnsetDetection.cpp  Tonal.cpp  Tonal.h  main.cpp  render.cpp
